<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/noResultsLayer" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/noResults" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:src="@drawable/hotels_no_results" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="16dp" android:textColor="@color/dark_grey_color" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="11dp" android:layout_marginRight="30dp" android:text="@string/hotel_no_results_title" android:layout_below="@+id/noResults" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="14dp" android:textColor="@color/light_grey_color" android:id="@+id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="5dp" android:layout_marginRight="30dp" android:text="@string/hotel_no_results_subtitle" android:layout_below="@+id/title" android:layout_centerHorizontal="true" />
    <TextView android:textSize="13dp" android:textColor="@color/orange_tours" android:id="@+id/restoreFilters" android:background="@color/transparent" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="24dp" android:text="@string/hotel_no_results_restore_filters" android:layout_below="@+id/subtitle" android:layout_centerHorizontal="true"/>
</RelativeLayout>