<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_image"
    tools:context="com.gbc.holidayhype.views.LoginActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#009688"
        android:text="@string/buttonLogin"
        android:textColor="#DAD8DF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#253488"
        android:text="@string/buttonSignup"
        android:textColor="#DAD8DF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="237dp"
        android:layout_marginTop="44dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_screen_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>