<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="7dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:id="@+id/CardView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ccardImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:background="@drawable/room"
                    android:backgroundTint="@color/white" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/iv_update"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/refresh"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/iv_update"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/iv_delete"
                    android:src="@drawable/delete"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ccardTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:padding="10dp"
                        android:background="@color/orange_tours"
                        android:text="@string/title"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ccardStartDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/orange_tours"
                        android:text="Start Date: 10-11-2022"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ccardDays"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/orange_tours"
                        android:text="Nights:"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ccardPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/orange_tours"
                        android:text="@string/price"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ccardTotalPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:padding="10dp"
                        android:background="@color/orange_tours"
                        android:text="@string/total_payment"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>